--- a/index.html
+++ b/index.html
@@ -4,80 +4,117 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dark👣 Systems | Tools. Scripts. Power.</title>
+  <title>Dark👣 Empire – Ayobamidele Aderosoye</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: Arial, sans-serif; background: #0f0f0f; color: #f1f1f1; margin: 0; padding: 0; }
-    header { background: #000; padding: 60px 20px; text-align: center; animation: fadeIn 2s ease-in; }
-    header h1 { font-size: 2.8em; margin: 0; color: #ffffff; }
-    header p { font-size: 1.3em; color: #bbbbbb; }
-    nav a { color: #00ffff; text-decoration: none; font-weight: bold; margin: 0 10px; }
-    nav a:hover { text-decoration: underline; }
-    section { padding: 40px 20px; max-width: 900px; margin: auto; animation: fadeInUp 1.5s ease-in; }
-    h2 { border-bottom: 2px solid #444; padding-bottom: 5px; color: #ffffff; }
-    a { color: #00ffff; text-decoration: none; }
-    .project, .blog-entry { margin-bottom: 30px; }
-    .button { display: inline-block; margin-top: 10px; padding: 10px 15px; background: #00ffff; color: #000; font-weight: bold; border-radius: 4px; transition: transform 0.3s ease; }
-    .button:hover { transform: scale(1.05); background: #00dddd; }
-    footer { text-align: center; padding: 20px; background: #111; color: #555; font-size: 0.9em; }
-    img.preview { width: 100%; max-width: 600px; border-radius: 8px; margin-top: 10px; }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #0f0f0f;
+      color: #ffffff;
     }
-    @keyframes fadeInUp {
-      from { transform: translateY(20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
+    header {
+      background-color: #1a1a1a;
+      padding: 2rem;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #b0b0b0;
+    }
+    nav {
+      text-align: center;
+      margin-top: 1rem;
+    }
+    nav a {
+      color: #ffffff;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-weight: bold;
+    }
+    section {
+      padding: 3rem 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    section p, li {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #d0d0d0;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #1a1a1a;
+      color: #777;
+      font-size: 0.9rem;
+    }
+    ul {
+      padding-left: 1.5rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Dark👣 Systems</h1>
-    <p>Tools. Scripts. Power.</p>
+    <h1>Ayobamidele Aderosoye</h1>
+    <p>Cloud & Automation Strategist | Building the Dark👣 Empire</p>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="blog.html">Blog</a>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#stack">Tech Stack</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
-  <section>
-    <h2>About Me</h2>
-    <p>I build tools that save hours. From PowerShell automation to full system admin workflows, I help businesses eliminate repetitive tasks and streamline operations.</p>
+
+  <section id="about">
+    <h2>About</h2>
+    <p>
+      I’m a Lagos-based systems strategist building the $1B Dark👣 Tech Empire through AI, cloud, and automation. I focus on infrastructure, tooling, and digital systems designed to run without human bottlenecks. My empire is remote-first, automation-driven, and global by design.
+    </p>
   </section>
-  <section>
+
+  <section id="projects">
     <h2>Projects</h2>
-    <div class="project">
-      <h3>PowerShell Automation Toolkit</h3>
-      <p>A 4-script PowerShell pack with documentation to eliminate repetitive IT tasks.</p>
-      <img src="https://via.placeholder.com/600x300?text=PowerShell+Toolkit+Preview" alt="Toolkit Preview" class="preview">
-      <a href="https://adroyphill.gumroad.com/l/powershell-automation-toolkit" class="button">View Product</a>
-    </div>
-    <div class="project">
-      <h3>Azure Cost Optimization</h3>
-      <p>Tag-based automation and budget alert setup to reduce monthly Azure spend.</p>
-      <img src="https://via.placeholder.com/600x300?text=Azure+Cost+Guide" alt="Azure Guide" class="preview">
-      <a href="#">GitHub Case Study</a>
-    </div>
-    <div class="project">
-      <h3>Remote Support Automation</h3>
-      <p>Tier 1/2 support automation using PowerShell for user unlocks and diagnostics.</p>
-      <img src="https://via.placeholder.com/600x300?text=Remote+Support+Automation" alt="Support Automation" class="preview">
-      <a href="#">GitHub Case Study</a>
-    </div>
+    <ul>
+      <li><strong>AutoStack™:</strong> An automation hub for cloud + IT infrastructure. [GitHub soon]</li>
+      <li><strong>Gumroad Store:</strong> PowerShell scripts, automation templates, and IT bundles → <a href="https://gumroad.com/products" target="_blank">View Store</a></li>
+      <li><strong>AI Agents:</strong> Training self-operating GPT-based systems to run business ops (private builds in progress)</li>
+    </ul>
   </section>
-  <section>
-    <h2>Resume & Contact</h2>
-    <p><a href="#">Download My Resume (PDF)</a></p>
-    <p>Email: <a href="mailto:adroyphill@gmail.com">adroyphill@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/aderosoye">github.com/aderosoye</a></p>
+
+  <section id="stack">
+    <h2>Empire Tech Stack</h2>
+    <ul>
+      <li>Cloud: Microsoft Azure, Azure CLI, Azure PowerShell</li>
+      <li>Automation: PowerShell, Bash, GitHub Actions</li>
+      <li>AI: GPT-4, OpenAI API, LangChain (in progress)</li>
+      <li>Frontend: Tailwind, React (with team)</li>
+      <li>Backend: Node.js, Python (with team)</li>
+    </ul>
   </section>
-  <section>
-    <h2>Store</h2>
-    <p>Visit my store for automation scripts, toolkits, and documentation templates.</p>
-    <a href="https://adroyphill.gumroad.com" class="button">Go to Store</a>
+
+  <section id="contact">
+    <h2>Let’s Collaborate</h2>
+    <p>
+      Want to collaborate, hire, or just connect? Reach out directly:
+    </p>
+    <ul>
+      <li>Email: <a href="mailto:adroyphill@gmail.com">adroyphill@gmail.com</a></li>
+      <li>GitHub: <a href="https://github.com/Aderosoye" target="_blank">Aderosoye</a></li>
+      <li>Twitter: <a href="https://twitter.com/ayoaderosoye" target="_blank">@ayoaderosoye</a></li>
+    </ul>
   </section>
+
   <footer>
-    Dark👣 Systems &copy; 2025. Built in silence. Moved in power.
+    &copy; 2025 Dark👣 Holdings. Built by Ayobamidele Aderosoye.
   </footer>
 </body>
 </html>
