--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
       <a href="#stack">Tech Stack</a>
+      <a href="blog.html">Blog</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
