--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dark👣 Empire – Ayobamidele Aderosoye</title>
+  <title>Dark👣 Systems – Ayobamidele Aderosoye</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -60,12 +59,16 @@
     ul {
       padding-left: 1.5rem;
     }
+    footer a {
+      color: #4fd1c5;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Ayobamidele Aderosoye</h1>
-    <p>Cloud & Automation Strategist | Building the Dark👣 Empire</p>
+    <h1>Dark👣 Systems</h1>
+    <p>Tools. Scripts. Power.</p>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -78,16 +81,25 @@
   <section id="about">
     <h2>About</h2>
     <p>
-      I’m a Lagos-based systems strategist building the $1B Dark👣 Tech Empire through AI, cloud, and automation. I focus on infrastructure, tooling, and digital systems designed to run without human bottlenecks. My empire is remote-first, automation-driven, and global by design.
+      Welcome to the official portfolio and product platform of <strong>Ayobamidele Aderosoye</strong> — a systems engineer focused on PowerShell automation, cloud operations, and silent backend mastery.
+    </p>
+    <p>
+      🔗 <strong>Live Site:</strong> <a href="https://aderosoye.github.io/dark-systems" target="_blank">aderosoye.github.io/dark-systems</a><br>
+      📝 <strong>Blog:</strong> <a href="https://aderosoye.github.io/dark-systems/blog.html" target="_blank">aderosoye.github.io/dark-systems/blog.html</a><br>
+      🛠️ <strong>Toolkit:</strong> <a href="https://adroyphill.gumroad.com/l/powershell-automation-toolkit" target="_blank">PowerShell Automation Toolkit</a><br>
+      🛒 <strong>Store:</strong> <a href="https://adroyphill.gumroad.com" target="_blank">adroyphill.gumroad.com</a><br>
+      📧 <strong>Contact:</strong> <a href="mailto:adroyphill@gmail.com">adroyphill@gmail.com</a><br>
+      📂 <strong>Resume:</strong> <a href="https://aderosoye.github.io/dark-systems" target="_blank">Available on website</a>
     </p>
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
+    <h2>What You'll Find Here</h2>
     <ul>
-      <li><strong>AutoStack™:</strong> An automation hub for cloud + IT infrastructure. [GitHub soon]</li>
-      <li><strong>Gumroad Store:</strong> PowerShell scripts, automation templates, and IT bundles → <a href="https://gumroad.com/products" target="_blank">View Store</a></li>
-      <li><strong>AI Agents:</strong> Training self-operating GPT-based systems to run business ops (private builds in progress)</li>
+      <li>My latest tools and automations (PowerShell scripts, system admin kits)</li>
+      <li>Blog posts on real-world IT automation</li>
+      <li>Case studies and solutions I've used in production</li>
+      <li>Quiet power, built to scale</li>
     </ul>
   </section>
 
@@ -115,7 +127,8 @@
   </section>
 
   <footer>
-    &copy; 2025 Dark👣 Holdings. Built by Ayobamidele Aderosoye.
+    &copy; 2025 Dark👣 Holdings. Built in silence. Moved in power. <br/>
+    <a href="blog.html">Read the Blog</a>
   </footer>
 </body>
 </html>
