--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <a href="#projects">Projects</a>
       <a href="#stack">Tech Stack</a>
       <a href="blog.html">Blog</a>
+      <a href="projects/autostack.html">AutoStack</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -98,6 +99,7 @@
     <ul>
       <li>My latest tools and automations (PowerShell scripts, system admin kits)</li>
       <li>Blog posts on real-world IT automation</li>
+      <li><strong><a href="projects/autostack.html">AutoStack™</a></strong> — A full cloud automation hub</li>
       <li>Case studies and solutions I've used in production</li>
       <li>Quiet power, built to scale</li>
     </ul>
