--- a/projects/autostack.html
+++ b/projects/autostack.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AutoStack™ – Cloud Automation Hub</title>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #0f0f0f;
+      color: #f0f0f0;
+      margin: 0;
+      padding: 2rem;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+    h2 {
+      margin-top: 2rem;
+      color: #4fd1c5;
+    }
+    p {
+      line-height: 1.6;
+      margin-bottom: 1rem;
+    }
+    ul {
+      margin-bottom: 2rem;
+      padding-left: 1.5rem;
+    }
+    a {
+      color: #4fd1c5;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
 
+  <h1>AutoStack™ – Cloud Automation Hub</h1>
+
+  <p><strong>AutoStack™</strong> is a remote-first automation hub that empowers engineers and teams to launch, manage, and scale cloud systems using modular scripts and intelligent workflows.</p>
+
+  <h2>🚀 What It Does</h2>
+  <ul>
+    <li>One-command deployment of entire Azure infrastructures</li>
+    <li>Modular PowerShell templates for repeatable operations</li>
+    <li>GitHub-based version control and CI integrations</li>
+    <li>Future: AI-powered script recommendations</li>
+  </ul>
+
+  <h2>🛠 Features</h2>
+  <ul>
+    <li>PowerShell-first architecture</li>
+    <li>Plug-and-play modules</li>
+    <li>Remote execution templates</li>
+    <li>Agent integration-ready (GPT-4 API)</li>
+  </ul>
+
+  <h2>📚 Learn More</h2>
+  <p>Blog post coming soon on how I’m building AutoStack from scratch, solo, under the Dark👣 empire blueprint.</p>
+
+  <p>GitHub release will drop here once stable.</p>
+
+  <p><a href="../index.html">← Back to Home</a></p>
+
+</body>
+</html>
